@@ -1,5 +1,5 @@
-val scala3Version = "3.2.2"
-lazy val akkaVersion = "2.8.0"
+val scala3Version = "3.3.5"
+lazy val akkaVersion = "2.10.0"
 lazy val root = project
   .in(file("."))
   .settings(
@@ -11,14 +11,12 @@ lazy val root = project
     // This is required as a workaround for https://github.com/lampepfl/dotty/issues/14846
     compileOrder := CompileOrder.JavaThenScala,
     scalaVersion := scala3Version,
-    javacOptions ++= Seq("-source", "17", "-target", "17", "--enable-preview"),
-    javaOptions ++= Seq("--enable-preview"),
+    resolvers += "Akka library repository".at("https://repo.akka.io/maven"),
 
     libraryDependencies ++= Seq(
       "com.typesafe.akka" %% "akka-actor-typed" % akkaVersion,
-      "com.typesafe.akka" %% "akka-actor-testkit-typed" % akkaVersion,
-      "ch.qos.logback" % "logback-classic" % "1.4.6",
+      "ch.qos.logback" % "logback-classic" % "1.5.8",
       "com.typesafe.akka" %% "akka-actor-testkit-typed" % akkaVersion % Test,
-      "org.scalatest" %% "scalatest" % "3.2.12" % Test,
+      "org.scalatest" %% "scalatest" % "3.2.15" % Test,
 )
   )
